Implemented Post creation validation, believe there is room for improvement but is a first approach. Implemented custom validations for post create

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,3 +1,6 @@
+Size=The post {0} must be between {1} and {2} characters
+MaxTagsSizeConstraint = The maximum amount of {0} permitted are 5
+MoviesSizeConstraint = You must select at least one {0}
 index.pagename=Moovify
 navbar.searchDots=Search...
 navbar.search=Search
@@ -11,7 +14,7 @@ post.create.emailPlaceholder=Email
 post.create.createButton=Create
 post.create.newPostTitle=Choose a title for your post
 post.create.newPostEmail=Insert your email
-post.create.modal.moviewDiscussed=What movies are discussed in this Post?
+post.create.modal.moviesDiscussed=What movies are discussed in this Post?
 post.create.modal.moviesPlaceholder=Insert the name of the movie you want to add
 post.create.modal.addButton=Add
 post.create.modal.tags=Write tags that describe this post (5 max)
