Finished post Form, now it shows all the errors, it can be improved on a front end perspective

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,6 +1,6 @@
 Size=The post {0} must be between {1} and {2} characters
 MaxTagsSizeConstraint = The maximum amount of {0} permitted are 5
-MoviesSizeConstraint = You must select at least one {0}
+MoviesSizeConstraint = You must select at least one movie from the list of {0}
 index.pagename=Moovify
 navbar.searchDots=Search...
 navbar.search=Search
@@ -12,7 +12,7 @@ post.create.newPost=Create new post
 post.create.titlePlaceholder=Title
 post.create.emailPlaceholder=Email
 post.create.createButton=Create
-post.create.newPostTitle=Choose a title for your post
+post.create.newPostTitle=Choose a title for your post (At least six characters)
 post.create.newPostEmail=Insert your email
 post.create.modal.moviesDiscussed=What movies are discussed in this Post?
 post.create.modal.moviesPlaceholder=Insert the name of the movie you want to add
@@ -44,5 +44,6 @@ error.moovifyNotFound = Moovify | Page not found
 error.error404 = ERROR 404
 error.pageNotFound = Page not found
 error.goBack = Go back
+post.create.body=Write the body of your post here. (It can't be empty)
 
 
