--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,7 +1,13 @@
 Size=The post {0} must be between {1} and {2} characters
 MaxTagsSizeConstraint = The maximum amount of {0} permitted are 5
 MoviesSizeConstraint = You must select at least one movie from the list of {0}
+Min=You must pick {1} {0}
+
 index.pagename=Moovify
+watchlist = Watchlist
+news = News
+debate = Debate
+critique = Critique
 navbar.searchDots=Search...
 navbar.search=Search
 navbar.createPost=Create Post
@@ -14,7 +20,7 @@ post.create.emailPlaceholder=Email
 post.create.createButton=Create
 post.create.newPostTitle=Choose a title for your post (At least six characters)
 post.create.newPostEmail=Insert your email
-post.create.modal.moviesDiscussed=What movies are discussed in this Post?
+post.create.modal.moviesDiscussed=What movies are discussed in this Post? (You have to choose at least one)
 post.create.modal.moviesPlaceholder=Insert the name of the movie you want to add
 post.create.modal.addButton=Add
 post.create.modal.tags=Write tags that describe this post (5 max)
@@ -45,5 +51,7 @@ error.error404 = ERROR 404
 error.pageNotFound = Page not found
 error.goBack = Go back
 post.create.body=Write the body of your post here. (It can't be empty)
+post.create.newPostCategory=Select your post category (Required)
+post.create.selectCategory=Choose a category
 
 
