Refactored search views and endpoints. One endpoint and view for each content type Post, Movie and User

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -26,20 +26,29 @@ comment.create.emailPlaceholder = Email
 comment.create.writeCommentPlaceholder = Write comment here...
 comment.view.premierDate = >Premier date: {0}
 comment.view.postsAbout = Posts about this movie
-search.posts.form.changeSearch = Want to change your Search?
-search.posts.form.searchingFor = Searching for:
-search.posts.form.sortBy = Sort by:
-search.posts.form.newSearch = New Search
-search.posts.form.postTitle = Post Title
-search.posts.form.movieTitle = Movie Title
-search.posts.form.tags = Tags
-search.posts.form.newest = Newest
-search.posts.form.oldest = Oldest
-search.posts.form.send = Send
-search.posts.searchTitle = Search results for: {0}
+search.pageTitle = Search results for {0}
+search.searchResults = Search results
 error.moovifyNotFound = Moovify | Page not found
 error.error404 = ERROR 404
 error.pageNotFound = Page not found
 error.goBack = Go back
+search.posts=Posts
+search.movies=Movies
+search.users=Users
+search.posts.categories.critique=Critique
+search.posts.categories.watchlist=Watchlist
+search.posts.categories.news=News
+search.posts.categories.debate=Debate
+search.posts.categories.all=All posts
+search.posts.postAge.allTime=All time
+search.posts.postAge.pastYear=Past Year
+search.posts.postAge.pastMonth=Past month
+search.posts.postAge.pastDay=Past 24hs
+search.posts.categories.label=Post type:
+search.posts.postAge.label=From:
+search.posts.sortCriteria.label=Sort by:
+search.posts.sortCriteria.newest=Newest
+search.posts.sortCriteria.hottest=Hottest
+search.posts.sortCriteria.oldest=Oldest
 
 
