User form, validating password equals repeat password, still have to validate if user and email are unique

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,7 +1,12 @@
-Size=The post {0} must be between {1} and {2} characters
+Size=The {0} must be between {1} and {2} characters
 MaxTagsSizeConstraint = The maximum amount of {0} permitted are 5
 MoviesSizeConstraint = You must select at least one movie from the list of {0}
 Min=You must pick {1} {0}
+ValidPassword= -Password must be between 8 and 30 characters \
+               -you must have at least one number \
+               -you must have at least one upper case character\
+               -you must have at least one lower case character\
+               -you must have at least one special character
 
 index.pagename=Moovify
 watchlist = Watchlist
@@ -53,5 +58,10 @@ error.goBack = Go back
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.newPostCategory=Select your post category (Required)
 post.create.selectCategory=Choose a category
+user.create.Username=Username
+user.create.Password=Password
+user.create.Name=Name
+user.create.Email=Email
+user.create.repeatPassword=Repeat password
 
 
