--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -1,3 +1,8 @@
 index.title=Moovify
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.title=Create Post
+user.create.Email=Email
+user.create.Name=Name
+user.create.Password=Password
+user.create.repeatPassword=Repeat password
+user.create.Username=Username
