--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -7,7 +7,8 @@ ValidPassword= -Password must be between 8 and 30 characters \
                -you must have at least one upper case character\
                -you must have at least one lower case character\
                -you must have at least one special character
-
+UniqueUsername=Username already in use
+UniqueEmail=Email already in use
 index.pagename=Moovify
 watchlist = Watchlist
 news = News
