Added the error to the login view for an incorrect login and their respective spring messages.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -64,5 +64,10 @@ user.create.Password=Password
 user.create.Name=Name
 user.create.Email=Email
 user.create.repeatPassword=Repeat password
+user.login=Login
+user.login.enterUsername=Enter your username
+user.login.enterPassword=Enter your password
+user.login.rememberMe=Remember me
+user.login.badCredentials=Incorrect user or password
 
 
