--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -6,3 +6,8 @@ user.create.Name=Name
 user.create.Password=Password
 user.create.repeatPassword=Repeat password
 user.create.Username=Username
+user.login=Login
+user.login.badCredentials=Incorrect user or password
+user.login.enterPassword=Enter your password
+user.login.enterUsername=Enter your username
+user.login.rememberMe=Remember me
