Login page styled

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -69,5 +69,6 @@ user.login.enterUsername=Enter your username
 user.login.enterPassword=Enter your password
 user.login.rememberMe=Remember me
 user.login.badCredentials=Incorrect user or password
+user.login.loginTitle=Log in
 
 
