--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -63,4 +63,8 @@ post.create.body=Write the body of your post here. (It can't be empty)
 post.create.newPostCategory=Select your post category (Required)
 post.create.selectCategory=Choose a category
 
+error.postNotFoundException=The post you're looking for doesn't exists. Make sure the ID is correct.
+error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the ID is correct.
+error.commentNotFoundException=The comment you're looking for doesn't exists. Make sure the ID is correct.
+error.defaultMessage=There seems to be an error in your request. You may try going back or starting again from the home page.
 
