Removed filter in web.xml for error 404. Enable servlet to throw NoHandlerFoundException and added it's handler.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -67,4 +67,5 @@ error.postNotFoundException=The post you're looking for doesn't exists. Make sur
 error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the ID is correct.
 error.commentNotFoundException=The comment you're looking for doesn't exists. Make sure the ID is correct.
 error.defaultMessage=There seems to be an error in your request. You may try going back or starting again from the home page.
+error.noHandlerFoundException=The provided URL doesn't seem to be valid. You may try going back or starting again from the home page.
 
