Now error handlers can print the error code.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -38,7 +38,7 @@ comment.view.postsAbout = Posts about this movie
 search.pageTitle = Search results for {0}
 search.searchResults = Search results
 error.moovifyNotFound = Moovify | Page not found
-error.error404 = ERROR 404
+error.errorWithCode = ERROR {0}
 error.pageNotFound = Page not found
 error.goBack = Go back
 search.posts=Posts
