--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -80,9 +80,10 @@ user.login.rememberMe=Remember me
 user.login.badCredentials=Incorrect user or password
 user.login.loginTitle=Log in
 
-error.postNotFoundException=The post you're looking for doesn't exists. Make sure the ID is correct.
-error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the ID is correct.
-error.commentNotFoundException=The comment you're looking for doesn't exists. Make sure the ID is correct.
+error.postNotFoundException=The post you're looking for doesn't exists. Make sure the provided info is correct.
+error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the provided info is correct.
+error.commentNotFoundException=The comment you're looking for doesn't exists. Make sure the provided info is correct.
+error.userNotFoundException=The user you're looking for doesn't exists. Make sure the provided info is correct.
 error.defaultMessage=There seems to be an error in your request. You may try going back or starting again from the home page.
 error.noHandlerFoundException=The provided URL doesn't seem to be valid. You may try going back or starting again from the home page.
 
