--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -1,6 +1,7 @@
 index.title=Moovify
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.title=Create Post
+user.comments=Comments of this user
 user.create.Email=Email
 user.create.Name=Name
 user.create.Password=Password
@@ -11,3 +12,6 @@ user.login.badCredentials=Incorrect user or password
 user.login.enterPassword=Enter your password
 user.login.enterUsername=Enter your username
 user.login.rememberMe=Remember me
+user.profile.inMoovifySince=In Moovify since: 
+user.profile.latestPosts=Latest posts
+user.profile.yourComments=Your comments
