Login and Signup views

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -73,7 +73,15 @@ user.create.Password=Password
 user.create.Name=Name
 user.create.Email=Email
 user.create.repeatPassword=Repeat password
+user.create.signUpTitle=Sign up
+user.create.signUpDesc=Give us some of your information to get free access to Moovify
+user.create.button=Create account
+user.create.alreadyAccount=Already have an account?
 user.login=Login
+user.login.noAccount=Do not have an account yet?
+user.logout=Logout
+user.signup=Signup
+user.profile=My profile
 user.login.enterUsername=Enter your username
 user.login.enterPassword=Enter your password
 user.login.rememberMe=Remember me
