--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -8,6 +8,7 @@ ValidPassword= -Password must be between 8 and 30 characters \
                -you must have at least one lower case character\
                -you must have at least one special character
 UniqueUsername=Username already in use
+Pattern=Invalid {0}
 UniqueEmail=Email already in use
 index.pagename=Moovify
 watchlist = Watchlist
