--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -75,7 +75,7 @@ user.create.Name=Name
 user.create.Email=Email
 user.create.repeatPassword=Repeat password
 user.create.signUpTitle=Sign up
-user.create.signUpDesc=Give us some of your information to get free access to Moovify
+user.create.signUpDesc=Please fill this form get free access to Moovify
 user.create.button=Create account
 user.create.alreadyAccount=Already have an account?
 user.login=Login
@@ -102,4 +102,9 @@ user.profile.inMoovifySince=In Moovify since:
 user.view.Profile=Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
+user.profile.Name=Name: {0}
+user.profile.Email=Email: {1}
+user.profile.Administrator=Administrator
+user.profile.Description=Description: 
+user.profile.EditProfile=Edit Profile
 
