--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -12,6 +12,11 @@ user.login.badCredentials=Incorrect user or password
 user.login.enterPassword=Enter your password
 user.login.enterUsername=Enter your username
 user.login.rememberMe=Remember me
+user.profile.Administrator=Administrator
+user.profile.Description=Description
+user.profile.EditProfile=Edit Profile
+user.profile.Email=Email
 user.profile.inMoovifySince=In Moovify since: 
 user.profile.latestPosts=Latest posts
+user.profile.Name=Create property
 user.profile.yourComments=Your comments
