Comments feature finished

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -38,8 +38,12 @@ post.view.minReading=Takes {0} min reading.
 comment.create.title=New Comment
 comment.create.postIdPlaceholder= Post Id
 comment.create.parentIdPlaceholder = Parent Id
-comment.create.emailPlaceholder = Email
-comment.create.writeCommentPlaceholder = Write comment here...
+comment.create.button = Submit
+comment.create.reply = Reply
+comment.create.replyPlaceholder = Write a reply...
+comment.create.replyBtn = Send
+comment.create.close = Close
+comment.create.writeCommentPlaceholder = Write a comment...
 comment.view.premierDate = >Premier date: {0}
 comment.view.postsAbout = Posts about this movie
 search.pageTitle = Search results for {0}
