fixed some minor visual bugs and some message properties

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -15,8 +15,8 @@ user.login.rememberMe=Remember me
 user.profile.Administrator=Administrator
 user.profile.Description=Description
 user.profile.EditProfile=Edit Profile
-user.profile.Email=Email
+user.profile.Email=Email {0}
 user.profile.inMoovifySince=In Moovify since: 
 user.profile.latestPosts=Latest posts
-user.profile.Name=Create property
+user.profile.Name=Name {0}
 user.profile.yourComments=Your comments
