--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -108,3 +108,9 @@ user.profile.Administrator=Administrator
 user.profile.Description=Description: 
 user.profile.EditProfile=Edit Profile
 
+
+# EMAIL
+
+mail.confirmation.header=Welcome to Moovify! We are glad you decided to join the family
+mail.confirmation.link=Finish the registration process
+
