Add visual changes to the views added, fixed bugs and configured an email smtp service to send the confirmation email

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -8,6 +8,7 @@ ValidPassword= -Password must be between 8 and 30 characters \
                -you must have at least one lower case character\
                -you must have at least one special character
 UniqueUsername=Username already in use
+NotEmpty=The {0} cannot be empty
 Pattern=Invalid {0}
 UniqueEmail=Email already in use
 index.pagename=Moovify
@@ -107,7 +108,7 @@ user.view.Profile=Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
 user.profile.Name=Name: {0}
-user.profile.Email=Email: {1}
+user.profile.Email=Email: {0}
 user.profile.Administrator=Administrator
 user.profile.Description=Description: 
 user.profile.EditProfile=Edit Profile
@@ -117,4 +118,11 @@ user.profile.EditProfile=Edit Profile
 
 mail.confirmation.header=Welcome to Moovify! We are glad you decided to join the family
 mail.confirmation.link=Finish the registration process
+user.profile.ConfirmationEmail=Please don't forget to validate your account. Please accept the confirmation email we have sent you. If you can't find it, please click here. 
+user.profile.ResendEmail=Resend email
+email.resendMessage={0}, the confirmation email was succesfully sent to: {1}
+email.emailConfirmation=Email confirmation
+email.resendConfirmationEmail=Resend confirmation email
+email.registrationConfirm=Congratulations {0}, your email has succesfully been confirmed. Now you will be able to access all the Moovify functionalities
+email.errorResendEmail=Ups, it seems that something went wrong, if you wish us to resend the email you can do it by clicking here
 
