--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -1,3 +1,8 @@
+email.emailConfirmation=Email confirmation
+email.errorResendEmail=Ups, it seems that something went wrong, if you wish us to resend the email you can do it by clicking here
+email.registrationConfirm=Congratulations {0}, your email has succesfully been confirmed. Now you will be able to access all the Moovify functionalities
+email.resendConfirmationEmail=Resend confirmation email
+email.resendMessage={0}, the confirmation email was succesfully sent to: {1}
 index.title=Moovify
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.title=Create Post
@@ -13,10 +18,12 @@ user.login.enterPassword=Enter your password
 user.login.enterUsername=Enter your username
 user.login.rememberMe=Remember me
 user.profile.Administrator=Administrator
+user.profile.ConfirmationEmail=Please don't forget to validate your account. Please accept the confirmation email we have sent you
 user.profile.Description=Description
 user.profile.EditProfile=Edit Profile
 user.profile.Email=Email {0}
 user.profile.inMoovifySince=In Moovify since: 
 user.profile.latestPosts=Latest posts
 user.profile.Name=Name {0}
+user.profile.ResendEmail=Resend email
 user.profile.yourComments=Your comments
