Reset Password Implemented

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -8,6 +8,7 @@ ValidPassword= -Password must be between 8 and 30 characters \
                -you must have at least one lower case character\
                -you must have at least one special character
 UniqueUsername=Username already in use
+ValidatedEmail=There isn't a user with that email validated
 Pattern=Invalid {0}
 UniqueEmail=Email already in use
 index.pagename=Moovify
@@ -117,4 +118,22 @@ user.profile.EditProfile=Edit Profile
 
 mail.confirmation.header=Welcome to Moovify! We are glad you decided to join the family
 mail.confirmation.link=Finish the registration process
+user.login.resetPassword=Forgot my password
+user.resetPassword.title=Reset Password
+user.resetPassword.header=Enter your e-mail to reset your password
+user.resetPassword.email=Enter E-mail
+user.resetPassword.validatedEmail.request=Important: your email must have been validated to be able to change your password
+user.resetPasswordTokenGenerated.title=Reset Password Token Generated
+user.resetPasswordTokenGenerated.body=We just sent you a mail to {0}. Follow the link included to finally reset your password.
+user.updatePassword.title=Update Password
+user.updatePassword.password=Enter new password
+user.updatePassword.failure=The link is invalid or expired. Please try again.
+user.updatePassword.success=Reset Password
+user.passwordResetSuccess={0}, your password has been changed successfully!
+user.passwordResetSuccess.title=Password Reset Success
+mail.passwordReset.header=Password Reset
+mail.passwordReset.link=Follow this link to change your password
+mail.passwordReset.title=Password Reset
+mail.confirmation.title=Confirmation Email
+user.updatePasswordError.title=Update Password
 
