--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -1,4 +1,8 @@
 index.title=Moovify
+mail.confirmation.title=Confirmation Email
+mail.passwordReset.header=Password Reset
+mail.passwordReset.link=Follow this link to change your password
+mail.passwordReset.title=Password Reset
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.title=Create Post
 user.comments=Comments of this user
@@ -12,11 +16,25 @@ user.login.badCredentials=Incorrect user or password
 user.login.enterPassword=Enter your password
 user.login.enterUsername=Enter your username
 user.login.rememberMe=Remember me
+user.login.resetPassword=Forgot my password
+user.passwordResetSuccess={0}, your password has been changed successfully!
+user.passwordResetSuccess.title=Password Reset Success
 user.profile.Administrator=Administrator
 user.profile.Description=Description
 user.profile.EditProfile=Edit Profile
 user.profile.Email=Email {0}
-user.profile.inMoovifySince=In Moovify since: 
+user.profile.inMoovifySince=In Moovify since:
 user.profile.latestPosts=Latest posts
 user.profile.Name=Name {0}
 user.profile.yourComments=Your comments
+user.resetPassword.email=Enter E-mail
+user.resetPassword.header=Enter your e-mail to reset your password
+user.resetPassword.title=Reset Password
+user.resetPassword.validatedEmail.request=Your email must have been validated to be able to change your password
+user.resetPasswordTokenGenerated.body=We just sent you a mail to {0}. Follow the link included to finally reset your password.
+user.resetPasswordTokenGenerated.title=Reset Password Token Generated
+user.updatePassword.failure=The link was invalid or expired. Please try again.
+user.updatePassword.password=Enter new password
+user.updatePassword.success=Reset Password
+user.updatePassword.title=Update Password
+user.updatePasswordError.title=Update Password
