Grouped movies and tags in post view. Added link to search/post for the tags shown

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -10,6 +10,9 @@ mail.passwordReset.link=Follow this link to change your password
 mail.passwordReset.title=Password Reset
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.title=Create Post
+post.view.movies=Movies:
+post.view.tags=Key words
+post.view.writtenBy=Written by:
 user.comments=Comments of this user
 user.create.Email=Email
 user.create.Name=Name
