Added placeholders for every search. Now there is a message informing no answer was found.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -147,5 +147,8 @@ email.errorResendEmail=Ups, it seems that something went wrong, if you wish us t
 post.view.movies=Movies
 post.view.tags=Key words
 post.view.writtenBy=Written by:
+search.posts.postsNotFound=There are no posts that match those requirements. Try changing the search parameters or looking for some new posts in the home screen.
+search.movies.moviesNotFound=There are no movies that match those requirements. Try changing the search parameters.
+search.user.userNotFound=There are no users that match those requirements. Try changing the search parameters.
 
 
