--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -13,6 +13,8 @@ post.create.title=Create Post
 post.view.movies=Movies:
 post.view.tags=Key words
 post.view.writtenBy=Written by:
+search.movies.moviesNotFound=Create property
+search.posts.postsNotFound=There are no posts that match those requirements. Try changing the search paremeters or looking for some new posts in the home screen.
 user.comments=Comments of this user
 user.create.Email=Email
 user.create.Name=Name
