Added visual changes to a couple of views that were looking a bit lackluster

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -36,12 +36,14 @@ user.profile.ResendEmail=Resend email
 user.profile.yourComments=Your comments
 user.resetPassword.email=Enter E-mail
 user.resetPassword.header=Enter your e-mail to reset your password
+user.resetPassword.send=Send email
 user.resetPassword.title=Reset Password
 user.resetPassword.validatedEmail.request=Your email must have been validated to be able to change your password
 user.resetPasswordTokenGenerated.body=We just sent you a mail to {0}. Follow the link included to finally reset your password.
 user.resetPasswordTokenGenerated.title=Reset Password Token Generated
 user.updatePassword.failure=The link was invalid or expired. Please try again.
 user.updatePassword.password=Enter new password
+user.updatePassword.send=Change password
 user.updatePassword.success=Reset Password
 user.updatePassword.title=Update Password
 user.updatePasswordError.title=Update Password
