--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -129,7 +129,7 @@ user.resetPasswordTokenGenerated.body=We just sent you a mail to {0}. Follow the
 user.updatePassword.title=Update Password
 user.updatePassword.password=Enter new password
 user.updatePassword.failure=The link is invalid or expired. Please try again.
-user.updatePassword.success=Reset Password
+user.updatePassword.success=Reset your Password
 user.passwordResetSuccess={0}, your password has been changed successfully!
 user.passwordResetSuccess.title=Password Reset Success
 mail.passwordReset.header=Password Reset
@@ -144,5 +144,7 @@ email.emailConfirmation=Email confirmation
 email.resendConfirmationEmail=Resend confirmation email
 email.registrationConfirm=Congratulations {0}, your email has succesfully been confirmed. Now you will be able to access all the Moovify functionalities
 email.errorResendEmail=Ups, it seems that something went wrong, if you wish us to resend the email you can do it by clicking here
+user.resetPassword.send=Send email
+user.updatePassword.send=Change password
 
 
