added comment replies start hidden add parallax effect on profile page

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -145,5 +145,6 @@ email.resendConfirmationEmail=Resend confirmation email
 email.registrationConfirm=Congratulations {0}, your email has succesfully been confirmed. Now you will be able to access all the Moovify functionalities
 email.errorResendEmail=Ups, it seems that something went wrong, if you wish us to resend the email you can do it by clicking here
 comment.create.not_validated=If you would like to leave a comment, please confirm your mail address!
+comment.replies.show=Show replies
 
 
