Added age support to post results in search view

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -154,5 +154,9 @@ search.movies.moviesNotFound=There are no movies that match those requirements. 
 search.user.userNotFound=There are no users that match those requirements. Try changing the search parameters.
 user.resetPassword.send=Send email
 user.updatePassword.send=Change password
+search.posts.results.meta={0} - By {1}
+search.posts.results.age.days={0} days ago
+search.posts.results.age.hours={0} hours ago
+search.posts.results.age.minutes={0} mins ago
 
 
