mail confirm modal added & user navbar restyled

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -110,7 +110,7 @@ user.view.Comments=Comments made by {0}
 user.profile.Name=Name: {0}
 user.profile.Email=Email: {0}
 user.profile.Administrator=Administrator
-user.profile.Description=Description: 
+user.profile.Description=Description:
 user.profile.EditProfile=Edit Profile
 
 
@@ -153,6 +153,9 @@ search.movies.moviesNotFound=There are no movies that match those requirements. 
 search.user.userNotFound=There are no users that match those requirements. Try changing the search parameters.
 user.resetPassword.send=Send email
 user.updatePassword.send=Change password
+user.emailConfirm.title=Email confirmation requiered
+user.emailConfirm.text=To be able to create a new post, you have to confirm your email address. Check your email box, we sent you a link!
+user.emailConfirm.closeModal=Ok, got it!
 search.posts.results.meta={0} - By {1}
 search.posts.results.age.days={0} days ago
 search.posts.results.age.hours={0} hours ago
