--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -153,9 +153,9 @@ search.movies.moviesNotFound=There are no movies that match those requirements. 
 search.user.userNotFound=There are no users that match those requirements. Try changing the search parameters.
 user.resetPassword.send=Send email
 user.updatePassword.send=Change password
-search.posts.results.meta={0} - By {1}
-search.posts.results.age.days={0} days ago
-search.posts.results.age.hours={0} hours ago
-search.posts.results.age.minutes={0} mins ago
+postDisplay.meta.description={0} - By {1}
+postDisplay.meta.age.days={0} days ago
+postDisplay.meta.age.hours={0} hours ago
+postDisplay.meta.age.minutes={0} mins ago
 
 
