JS validations in /post/create

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -11,6 +11,7 @@ mail.passwordReset.header=Password Reset
 mail.passwordReset.link=Follow this link to change your password
 mail.passwordReset.title=Password Reset
 post.create.body=Write the body of your post here. (It can't be empty)
+post.create.modal.movieError.client=You have to select at least one movie
 post.create.title=Create Post
 post.view.movies=Movies:
 post.view.tags=Key words
