--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,6 +1,6 @@
 Size=The {0} must be between {1} and {2} characters
 MaxTagsSizeConstraint = The maximum amount of {0} permitted are 5
-MoviesSizeConstraint = You must select at least one movie from the list of {0}
+MoviesSizeConstraint = You must select at least one movie from the list of {0} and no more than 20
 Min=You must pick {1} {0}
 ValidPassword= -Password must be between 8 and 30 characters \
                -you must have at least one upper case character\
@@ -160,5 +160,6 @@ search.posts.results.meta={0} - By {1}
 search.posts.results.age.days={0} days ago
 search.posts.results.age.hours={0} hours ago
 search.posts.results.age.minutes={0} mins ago
+post.create.modal.movieError.client=You have to select at least one movie
 
 
