Reformatted the view and profile page, added the comments and posts different views.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -2,10 +2,7 @@ Size=The {0} must be between {1} and {2} characters
 MaxTagsSizeConstraint = The maximum amount of {0} permitted are 5
 MoviesSizeConstraint = You must select at least one movie from the list of {0}
 Min=You must pick {1} {0}
-ValidPassword= -Password must be between 8 and 30 characters \
-               -you must have at least one upper case character\
-               -you must have at least one lower case character\
-               -you must have at least one special character
+ValidPassword= Password must be between 12 and 30 characters
 UniqueUsername=Username already in use
 NotEmpty=The {0} cannot be empty
 ValidatedEmail=There isn't a user with that email validated
@@ -160,5 +157,6 @@ postDisplay.meta.description={0} - By {1}
 postDisplay.meta.age.days={0} days ago
 postDisplay.meta.age.hours={0} hours ago
 postDisplay.meta.age.minutes={0} mins ago
+user.view.CommentsNotFound=Comments not found
 
 
