--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -57,3 +57,4 @@ user.updatePassword.send=Change password
 user.updatePassword.success=Reset Password
 user.updatePassword.title=Update Password
 user.updatePasswordError.title=Update Password
+user.view.CommentsNotFound=Comments not found
