Added semantic tags to multiple views. Transformed most movie/view messages from plain text to spring:message

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -160,5 +160,13 @@ postDisplay.meta.description={0} - By {1}
 postDisplay.meta.age.days={0} days ago
 postDisplay.meta.age.hours={0} hours ago
 postDisplay.meta.age.minutes={0} mins ago
+post.view.comments.title=Comments ({0})
+movie.view.meta.releaseDate=Premier date: {0}
+movie.view.meta.popularity=Popularity: {0}
+movie.view.meta.originalLanguage=Original language: {0}
+movie.view.meta.originalTitle=Original title: {0}
+movie.view.meta.voteAverage=Vote Average: {0}
+movie.view.meta.movieCategories.title=Movie categories
+movie.view.overview=Overview
 
 
