--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -10,8 +10,16 @@ mail.confirmation.title=Confirmation Email
 mail.passwordReset.header=Password Reset
 mail.passwordReset.link=Follow this link to change your password
 mail.passwordReset.title=Password Reset
+movie.view.meta.movieCategories.title=Movie categories
+movie.view.meta.originalLanguage=Original language: {0}
+movie.view.meta.originalTitle=Original title: {0}
+movie.view.meta.popularity=Popularity: {0}
+movie.view.meta.releaseDate=Premier date: {0}
+movie.view.meta.voteAverage=Vote Average: {0}
+movie.view.overview=Overview
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.title=Create Post
+post.view.comments.title=Comments ({0})
 post.view.movies=Movies:
 post.view.tags=Key words
 post.view.writtenBy=Written by:
