Modified post create modal to improve UX

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -25,10 +25,12 @@ post.create.emailPlaceholder=Email
 post.create.createButton=Create
 post.create.newPostTitle=Choose a title for your post (At least six characters)
 post.create.newPostEmail=Insert your email
-post.create.modal.moviesDiscussed=What movies are discussed in this Post? (You have to choose at least one)
+post.create.modal.moviesDiscussed.title=What movies are discussed in this Post?
+post.create.modal.moviesDiscussed.constrains=You have to choose at least one (max 20)
 post.create.modal.moviesPlaceholder=Insert the name of the movie you want to add
 post.create.modal.addButton=Add
-post.create.modal.tags=Write tags that describe this post (5 max)
+post.create.modal.tags=Add some key words that describe this post
+post.create.modal.tags.constrains=You may add up to 5 tags
 post.create.modal.tagsPlaceholder=Write the tag here
 post.create.modal.sendButton=Send
 post.view.written=Written on
