Added a message and changed the password constraint validator

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -7,6 +7,7 @@ UniqueUsername=Username already in use
 NotEmpty=The {0} cannot be empty
 ValidatedEmail=There isn't a user with that email validated
 Pattern=Invalid {0}
+Email=The input is not a valid email
 UniqueEmail=Email already in use
 index.pagename=Moovify
 watchlist = Watchlist
