password reset restyled

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -124,7 +124,7 @@ user.resetPassword.header=Enter your e-mail to reset your password
 user.resetPassword.email=Enter E-mail
 user.resetPassword.validatedEmail.request=Important: your email must have been validated to be able to change your password
 user.resetPasswordTokenGenerated.title=Reset Password Token Generated
-user.resetPasswordTokenGenerated.body=We just sent you a mail to {0}. Follow the link included to finally reset your password.
+user.resetPasswordTokenGenerated.body=We just sent you a mail to {0}.\nFollow the link included to finally reset your password.
 user.updatePassword.title=Update Password
 user.updatePassword.password=Enter new password
 user.updatePassword.failure=The link is invalid or expired. Please try again.
