visual fixes of texts

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -161,7 +161,8 @@ postDisplay.meta.age.days={0} days ago
 postDisplay.meta.age.hours={0} hours ago
 postDisplay.meta.age.minutes={0} mins ago
 post.create.modal.movieError.client=You have to select at least one movie
-user.view.CommentsNotFound=Comments not found
+user.view.CommentsNotFound=This user doesn't have any comment.
+user.profile.CommentsNotFound=You don't have any comment. You can comment any post to show your feedback.
 post.view.comments.title=Comments ({0})
 movie.view.meta.releaseDate=Premier date: {0}
 movie.view.meta.popularity=Popularity: {0}
@@ -170,5 +171,7 @@ movie.view.meta.originalTitle=Original title: {0}
 movie.view.meta.voteAverage=Vote Average: {0}
 movie.view.meta.movieCategories.title=Movie categories
 movie.view.overview=Overview
+user.view.postNotFound=This user doesn't have any posts.
+user.profile.postNotFound=You don't have posts. Create one !
 
 
