--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -51,6 +51,7 @@ user.profile.Email=Email {0}
 user.profile.inMoovifySince=In Moovify since:
 user.profile.latestPosts=Latest posts
 user.profile.Name=Name {0}
+user.profile.postNotFound=You don't have posts. Create one !
 user.profile.ResendEmail=Resend email
 user.profile.yourComments=Your comments
 user.resetPassword.email=Enter E-mail
@@ -66,4 +67,4 @@ user.updatePassword.send=Change password
 user.updatePassword.success=Reset Password
 user.updatePassword.title=Update Password
 user.updatePasswordError.title=Update Password
-user.view.CommentsNotFound=Comments not found
+user.view.CommentsNotFound=This user doesn't have any comment.
