Profile and user view modified

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -67,3 +67,4 @@ user.updatePassword.success=Reset Password
 user.updatePassword.title=Update Password
 user.updatePasswordError.title=Update Password
 user.view.CommentsNotFound=Comments not found
+user.view.postsNotFound=This user doesn't have any posts
