Baja lógica implemented

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -131,6 +131,7 @@ user.updatePassword.failure=The link is invalid or expired. Please try again.
 user.updatePassword.success=Reset your Password
 user.passwordResetSuccess={0}, your password has been changed successfully!
 user.passwordResetSuccess.title=Password Reset Success
+user.notEnabled.name=Removed
 mail.passwordReset.header=Password Reset
 mail.passwordReset.link=Follow this link to change your password
 mail.passwordReset.title=Password Reset
