Likes, first aproach, i will keep on testing but its a good first version

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -173,5 +173,7 @@ movie.view.meta.movieCategories.title=Movie categories
 movie.view.overview=Overview
 user.view.postNotFound=This user doesn't have any posts.
 user.profile.postNotFound=You don't have posts. Create one !
+index.hottestPost=Hottest Posts
+post.view.likes=Likes:
 
 
