--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -5,6 +5,7 @@ email.errorResendEmail=Ups, it seems that something went wrong, if you wish us t
 email.registrationConfirm=Congratulations {0}, your email has succesfully been confirmed. Now you will be able to access all the Moovify functionalities
 email.resendConfirmationEmail=Resend confirmation email
 email.resendMessage={0}, the confirmation email was succesfully sent to: {1}
+index.hottestPost=Hottest Posts
 index.title=Moovify
 mail.confirmation.title=Confirmation Email
 mail.passwordReset.header=Password Reset
@@ -21,6 +22,7 @@ post.create.body=Write the body of your post here. (It can't be empty)
 post.create.modal.movieError.client=You have to select at least one movie
 post.create.title=Create Post
 post.view.comments.title=Comments ({0})
+post.view.likes=Likes:
 post.view.movies=Movies:
 post.view.tags=Key words
 post.view.writtenBy=Written by:
