Added pageSize selector to search/post view.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -170,5 +170,5 @@ movie.view.meta.originalTitle=Original title: {0}
 movie.view.meta.voteAverage=Vote Average: {0}
 movie.view.meta.movieCategories.title=Movie categories
 movie.view.overview=Overview
-
-
+search.posts.pagination.pageSize.default=5
+search.posts.pagination.pageSize.message=Showing
