--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -146,6 +146,7 @@ email.registrationConfirm=Congratulations {0}, your email has succesfully been c
 email.errorResendEmail=Ups, it seems that something went wrong, if you wish us to resend the email you can do it by clicking here
 comment.create.not_validated=If you would like to leave a comment, please confirm your mail address!
 comment.replies.show=Show replies
+comment.notEnabled.message=** This comment was removed :( **
 post.view.movies=Movies
 post.view.tags=Key words
 post.view.writtenBy=Written by:
