Added pagination to search/user. Now paginationController is a separate module that can be included in any view that uses PaginatedCollection.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -174,7 +174,7 @@ movie.view.meta.voteAverage=Vote Average: {0}
 movie.view.meta.movieCategories.title=Movie categories
 movie.view.overview=Overview
 search.posts.pagination.pageSize.default=5
-search.posts.pagination.pageSize.message=Showing
+paginationController.pageSize.message=Showing
 user.view.postNotFound=This user doesn't have any posts.
 user.profile.postNotFound=You don't have posts. Create one !
 index.hottestPost=Hottest Posts
