Added pagiantion to movie/view and all user views.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -173,6 +173,7 @@ movie.view.meta.originalTitle=Original title: {0}
 movie.view.meta.voteAverage=Vote Average: {0}
 movie.view.meta.movieCategories.title=Movie categories
 movie.view.overview=Overview
+movie.view.posts.postsNotFound=There doesn't seem to exists posts about this movie, go create one!
 search.posts.pagination.pageSize.default=5
 paginationController.pageSize.message=Showing
 user.view.postNotFound=This user doesn't have any posts.
