--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -34,6 +34,8 @@ post.create.modal.tags=Add some key words that describe this post
 post.create.modal.tags.constrains=You may add up to 5 tags
 post.create.modal.tagsPlaceholder=Write the tag here
 post.create.modal.sendButton=Send
+post.delete.button = delete post
+post.delete.modalTitle = Are you sure you want to delete this post?
 post.view.written=Written on
 post.view.minReading=Takes {0} min reading.
 comment.create.title=New Comment
@@ -45,6 +47,10 @@ comment.create.replyPlaceholder = Write a reply...
 comment.create.replyBtn = Send
 comment.create.close = Close
 comment.create.writeCommentPlaceholder = Write a comment...
+comment.delete.button = Delete comment
+comment.delete.confirmTitle = Are you sure you want to delete this comment?
+comment.delete.cancelButton = No
+comment.delete.confirmButton = Yes
 comment.view.premierDate = >Premier date: {0}
 comment.view.postsAbout = Posts about this movie
 search.pageTitle = Search results for {0}
