Avatar validation in user creation

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -9,6 +9,7 @@ ValidatedEmail=There isn't a user with that email validated
 Pattern=Invalid {0}
 Email=The input is not a valid email
 UniqueEmail=Email already in use
+Avatar=The avatar uploaded must be an image smaller than 1 MB
 index.pagename=Moovify
 watchlist = Watchlist
 news = News
