Implemented edit profile

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -26,6 +26,7 @@ post.view.likes=Likes:
 post.view.movies=Movies:
 post.view.tags=Key words
 post.view.writtenBy=Written by:
+user.profile.edit.currentName=Current name: {0} 
 search.movies.moviesNotFound=Create property
 search.posts.postsNotFound=There are no posts that match those requirements. Try changing the search paremeters or looking for some new posts in the home screen.
 user.comments=Comments of this user
@@ -47,12 +48,15 @@ user.passwordResetSuccess={0}, your password has been changed successfully!
 user.passwordResetSuccess.title=Password Reset Success
 user.profile.Administrator=Administrator
 user.profile.ConfirmationEmail=Please don't forget to validate your account. Please accept the confirmation email we have sent you
-user.profile.Description=Description
+user.profile.Description=Description: {0}
+user.profile.editingProfile=Editing {0}'s profile
 user.profile.EditProfile=Edit Profile
-user.profile.Email=Email {0}
+user.profile.editProfileDesc=Here you will be able to edit your data and password
+user.profile.Email=Email: {0}
 user.profile.inMoovifySince=In Moovify since:
 user.profile.latestPosts=Latest posts
-user.profile.Name=Name {0}
+user.profile.Name=Name: {0}
+user.profile.notDescription=You don't have a description yet. Enter one !
 user.profile.postNotFound=You don't have posts. Create one !
 user.profile.ResendEmail=Resend email
 user.profile.yourComments=Your comments
@@ -70,3 +74,18 @@ user.updatePassword.success=Reset Password
 user.updatePassword.title=Update Password
 user.updatePasswordError.title=Update Password
 user.view.CommentsNotFound=This user doesn't have any comment.
+user.profile.edit.newName=New name
+user.profile.edit.currentEmail=Current email : {0}
+user.profile.edit.newEmail=New email
+user.profile.edit.currentUsername=Current username: {0}
+user.profile.edit.newUsername=New username
+user.profile.edit.changePassword=Change your current password
+user.profile.edit.newPassword=New password
+user.profile.edit.repeatPassword=Repeat password: 
+user.profile.edit.newRepeatPassword=Repeat password (must match)
+user.create.newDescription=New description
+user.profile.edit.newDescription=New description:
+user.profile.changePasswordDesc=You can change your password in here. Be careful, your old password will not work any longer
+user.profile.edit.name=Edit name
+user.profile.edit.username=Edit username
+user.profile.edit.description=Edit description
