--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -110,7 +110,7 @@ user.view.Comments=Comments made by {0}
 user.profile.Name=Name: {0}
 user.profile.Email=Email: {0}
 user.profile.Administrator=Administrator
-user.profile.Description=Description:
+user.profile.Description=Description: {0}
 user.profile.EditProfile=Edit Profile
 
 
@@ -179,5 +179,25 @@ user.view.postNotFound=This user doesn't have any posts.
 user.profile.postNotFound=You don't have posts. Create one !
 index.hottestPost=Hottest Posts
 post.view.likes=Likes:
+user.view.notDescription=This user doesn't have a description yet.
+user.profile.editingProfile=Editing {0}'s profile
+user.profile.editProfileDesc=Here you will be able to edit your data and password
+user.profile.edit.currentName=Current name: {0} 
+user.profile.edit.newName=New name
+user.profile.edit.currentEmail=Current email : {0}
+user.profile.edit.newEmail=New email
+user.profile.edit.currentUsername=Current username: {0}
+user.profile.edit.newUsername=New username
+user.profile.edit.changePassword=Change your current password
+user.profile.edit.wantChangePassword=Want to change your Password?
+user.profile.edit.newPassword=New password
+user.profile.edit.repeatPassword=Repeat password: 
+user.profile.edit.newRepeatPassword=Repeat password (must match)
+user.create.newDescription=New description
+user.profile.edit.newDescription=New description:
+user.profile.changePasswordDesc=You can change your password in here. Be careful, your old password will not work any longer
+user.profile.edit.name=Edit name
+user.profile.edit.username=Edit username
+user.profile.edit.description=Edit description
 
 
