Minor fixes on merge on deploy

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -188,6 +188,7 @@ user.profile.postNotFound=You don't have posts. Create one !
 index.hottestPost=Hottest Posts
 post.view.likes=Likes:
 user.view.notDescription=This user doesn't have a description yet.
+user.profile.notDescription=You don't have a description yet. Enter one !
 user.profile.editingProfile=Editing {0}'s profile
 user.profile.editProfileDesc=Here you will be able to edit your data and password
 user.profile.edit.currentName=Current name: {0} 
