Disabled selected page in paginationController.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -54,7 +54,9 @@ comment.delete.cancelButton = No
 comment.delete.confirmButton = Yes
 comment.view.premierDate = >Premier date: {0}
 comment.view.postsAbout = Posts about this movie
-search.pageTitle = Search results for {0}
+search.posts.pageTitle = Posts search
+search.movies.pageTitle = Movies search
+search.users.pageTitle = Users search
 search.searchResults = Search results
 error.moovifyNotFound = Moovify | Page not found
 error.errorWithCode = ERROR {0}
