Visual change for the user create

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -89,3 +89,5 @@ user.profile.changePasswordDesc=You can change your password in here. Be careful
 user.profile.edit.name=Edit name
 user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
+user.create.selectAvatar=Want to select an avatar? (Optional)
+user.create.selectFile=Select file
