Comment view connected to commentTree, now every comment can be seen in its own view

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -156,6 +156,7 @@ email.errorResendEmail=Ups, it seems that something went wrong, if you wish us t
 comment.create.not_validated=If you would like to leave a comment, please confirm your mail address!
 comment.replies.show=Show replies ({0}) ...
 comment.notEnabled.message=** This comment was removed :( **
+comment.notEnabled.fullMessage=This comment was removed. Here you can see all the replies it had while it was active
 post.view.movies=Movies
 post.view.tags=Key words
 post.view.writtenBy=Written by:
@@ -210,5 +211,6 @@ user.profile.changePasswordDesc=You can change your password in here. Be careful
 user.profile.edit.name=Edit name
 user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
+comment.viewComment=View all replies
 
 
