Implemented edit avatar from profile

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -212,5 +212,6 @@ user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
 user.create.selectAvatar=Want to select an avatar? (Optional)
 user.create.selectFile=Select file
+user.profile.uploadAvatar=Upload new avatar
 
 
