--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -109,19 +109,21 @@ error.commentNotFoundException=The comment you're looking for doesn't exists. Ma
 error.userNotFoundException=The user you're looking for doesn't exists. Make sure the provided info is correct.
 error.defaultMessage=There seems to be an error in your request. You may try going back or starting again from the home page.
 error.noHandlerFoundException=The provided URL doesn't seem to be valid. You may try going back or starting again from the home page.
+user.view.Profile=Welcome to {0}'s Profile
+user.view.Posts=Posts written by {0}
+user.view.Comments=Comments made by {0}
 user.profile.Profile={0}'s Profile
 user.profile.yourPosts=Your Posts
 user.profile.yourComments=Your comments
 user.profile.inMoovifySince=In Moovify since:
-user.view.Profile=Welcome to {0}'s Profile
-user.view.Posts=Posts written by {0}
-user.view.Comments=Comments made by {0}
 user.profile.Name=Name: {0}
 user.profile.Email=Email: {0}
 user.profile.Administrator=Administrator
 user.profile.Description=Description: {0}
 user.profile.EditProfile=Edit Profile
-
+user.profile.adminBtn=promote to admin
+user.profile.modalCancel=Cancel
+user.profile.modalTitle=Are you sure you want to promote {0} to Administrator?
 
 # EMAIL
 
